--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   },
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.12",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
